--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ option(EXIP_FORCE_SCOPE "If the exip namespace should be forced." ON)
 add_subdirectory(vendored/exip)
 
 add_library(exicpp STATIC src/Empty.cpp)
-target_include_directories(exicpp PUBLIC include)
+target_include_directories(exicpp PUBLIC include vendored/rapidxml)
 target_link_libraries(exicpp PUBLIC exip::exip)
 target_compile_features(exicpp PUBLIC cxx_std_17)
 
