Add private includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,10 @@ add_library(exicpp STATIC
   src/Writer.cpp
   src/XML.cpp
 )
-target_include_directories(exicpp PUBLIC include vendored/rapidxml)
+target_include_directories(exicpp
+  PUBLIC include vendored/rapidxml
+  PRIVATE include/exicpp 
+)
 target_link_libraries(exicpp PUBLIC exip::exip)
 target_compile_features(exicpp PUBLIC cxx_std_17)
 
