Implement better debug printing

--- a/vendored/exip/src/CMakeLists.txt
+++ b/vendored/exip/src/CMakeLists.txt
@@ -3,6 +3,7 @@ include_items(COMMON_SRC "common/src"
   "ASCII_stringManipulate.c"
   "contentHandler.c"
   "dynamicArray.c"
+  "errorHandle.c"
   "hashtable.c"
   "memManagement.c"
   "procTypes.c"
