--- a/vendored/exip/CMakeLists.txt
+++ b/vendored/exip/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CONFIG_FOLDER "build/gcc/${EXIP_CONFIG_TYPE}")
 
 option(EXIP_DEBUG "Enable debug printing." ON)
 option(EXIP_ANSI "Enable ANSI codes." OFF)
-valued_option(EXIP_DEBUG_LEVEL "The debugging level (INFO, WARNING or ERROR)" "INFO")
+valued_option(EXIP_DEBUG_LEVEL "The debugging level (INFO, WARNING or ERROR)" "ERROR")
 
 option(EXI_GRAMMAR_GENERATION "" ON)
 option(EXI_SCHEMA_GRAMMAR_GENERATION "" ON)
