--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,4 +73,8 @@ endif()
 if(PROJECT_IS_TOP_LEVEL)
   add_executable(exi-driver Driver.cpp)
   target_link_libraries(exi-driver exicpp)
+  if(EXICPP_PROFILE)
+    target_compile_options(exi-driver PUBLIC -g -pg)
+    target_link_options(exi-driver PUBLIC -pg)
+  endif()
 endif()
