--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ endif()
 option(EXICPP_DRIVER "If the driver should be built." OFF)
 option(EXICPP_TESTS "If tests should be run." OFF)
 
+option(EXICPP_FAST_DEBUG "If parts of debug builds should be optimized." OFF)
 option(EXICPP_EXCEPTIONS "If exceptions should be enabled." OFF)
 option(EXICPP_DEBUG  "If debug printing should be enabled." ON)
 option(EXICPP_ANSI   "If ANSI should be enabled." ON)
@@ -27,10 +28,20 @@ option(EXICPP_ANSI   "If ANSI should be enabled." ON)
 option(EXIP_FORCE_SCOPE "If the exip namespace should be forced." ON)
 option(EXIP_USE_MIMALLOC "If allocation should be done through mimalloc" ON)
 
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+  set(EXICPP_DEBUG_BUILD ON)
+else()
+  set(EXICPP_DEBUG_BUILD OFF)
+  set(EXICPP_FAST_DEBUG OFF)
+endif()
+
 message(STATUS "[exicpp] Tests: ${EXICPP_TESTS}")
 message(STATUS "[exicpp] Debug printing: ${EXICPP_DEBUG}")
 message(STATUS "[exicpp] ANSI printing: ${EXICPP_ANSI}")
 message(STATUS "[exicpp] Exceptions: ${EXICPP_EXCEPTIONS}")
+if(EXICPP_DEBUG_BUILD)
+  message(STATUS "[exicpp] Fast debug: ${EXICPP_FAST_DEBUG}")
+endif()
 
 set(EXIP_DEBUG ${EXICPP_DEBUG})
 if(EXICPP_ANSI)
@@ -45,9 +56,12 @@ if(EXIP_USE_MIMALLOC)
   # Currently doesn't work on windows.
   set(MI_WIN_REDIRECT OFF)
 
-  if(CMAKE_BUILD_TYPE EQUAL "DEBUG")
-    set(MI_PADDING ON)
-    set(MI_TRACK_ETW ON)
+  if(EXICPP_DEBUG_BUILD)
+    if(EXICPP_FAST_DEBUG)
+      set(MI_NO_PADDING ON)
+    else()
+      set(MI_TRACK_ETW ON)
+    endif()
   endif()
   # TODO: Debug speedups?
   add_subdirectory(vendored/mimalloc)
