Add runtime ANSI features

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,14 +71,16 @@ add_subdirectory(vendored/exip)
 add_subdirectory(vendored/fmt)
 
 include_items(EXICPP_SRC "src"
-  Debug/CheckFlags.cpp
   BinaryBuffer.cpp
   Errors.cpp
   Filesystem.cpp
   Writer.cpp
   XML.cpp
+
+  Debug/CheckFlags.cpp
   Debug/Format.cpp
   Debug/RapidxmlHandler.cpp
+  Debug/Terminal.cpp
 )
 
 add_library(exicpp STATIC ${EXICPP_SRC})
