Inline configure_file function

--- a/include/core/Config/Config.inc.in
+++ b/include/core/Config/Config.inc.in
@@ -1,4 +1,4 @@
-//===- Config.inc ---------------------------------------------------===//
+//===- Config/Config.inc --------------------------------------------===//
 //
 // Copyright (C) 2024 Eightfold
 //
